--- a/tmux.conf
+++ b/tmux.conf
@@ -1,8 +1,19 @@
+# Plugins Installation
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-cpu'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run -b '~/.tmux/plugins/tpm/tpm'
+
 # Set color scheme for VIM
 set-option -g default-terminal "screen-256color"
 
 # Easy config reload
 bind-key R source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
+
+# Set status bar for tmux
+set -g status-left '#{cpu_bg_color} CPU: #{cpu_icon} #{cpu_percentage} | %a %h-%d %H:%M '
 
 # Set mouse mode on for better interaction
 set -g mouse on
@@ -24,9 +35,4 @@ bind P paste-buffer
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-selection
 bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
-# Status Bar
-set-option -g status-interval 1
-set-option -g status-style bg=black
-set-option -g status-style fg=white
-set -g status-left '#[fg=green]#H #[default]'
-set -g status-right '%a%l:%M:%S %p#[default] #[fg=blue]%Y-%m-%d'
+
