--- a/tmux.conf
+++ b/tmux.conf
@@ -9,11 +9,29 @@ run -b '~/.tmux/plugins/tpm/tpm'
 # Set color scheme for VIM
 set-option -g default-terminal "screen-256color"
 
+source "/usr/lib/python3.8/site-packages/powerline/bindings/tmux/powerline.conf"
+
+# remap prefix to Control + a
+set -g prefix C-a
+unbind C-b
+bind C-a send-prefix
+
+# force a reload of the config file
+unbind r
+bind r source-file ~/.tmux.conf
+
+# quick pane cycling
+unbind ^A
+bind ^A select-pane -t :.+
+
 # Easy config reload
 bind-key R source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
 
 # Set status bar for tmux
 set -g status-left '#{cpu_bg_color} CPU: #{cpu_icon} #{cpu_percentage} | %a %h-%d %H:%M '
+set -g status-right-length 60
+set -g status-right "#[fg=blue]#S #I:#P #[fg=yellow]: %d %b %Y #[fg=green]: %l:%M %p : #(date -u | awk '{print $4}') :"
+set -g status-right "#[fg=blue]#(tmux-cpu --no-color)"
 
 # Set mouse mode on for better interaction
 set -g mouse on
