--- a/tmux.conf
+++ b/tmux.conf
@@ -1,15 +1,5 @@
-# Plugins Installation
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-cpu'
-
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run -b '~/.tmux/plugins/tpm/tpm'
-
 # Set color scheme for VIM
 set-option -g default-terminal "screen-256color"
-
-source "/usr/lib/python3.8/site-packages/powerline/bindings/tmux/powerline.conf"
 
 # remap prefix to Control + a
 set -g prefix C-a
@@ -28,10 +18,10 @@ bind ^A select-pane -t :.+
 bind-key R source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
 
 # Set status bar for tmux
-set -g status-left '#{cpu_bg_color} CPU: #{cpu_icon} #{cpu_percentage} | %a %h-%d %H:%M '
-set -g status-right-length 60
-set -g status-right "#[fg=blue]#S #I:#P #[fg=yellow]: %d %b %Y #[fg=green]: %l:%M %p : #(date -u | awk '{print $4}') :"
-set -g status-right "#[fg=blue]#(tmux-cpu --no-color)"
+#set -g status-left '#{cpu_bg_color} CPU: #{cpu_icon} #{cpu_percentage} | %a %h-%d %H:%M '
+#set -g status-right-length 60
+#set -g status-right "#[fg=blue]#S #I:#P #[fg=yellow]: %d %b %Y #[fg=green]: %l:%M %p : #(date -u | awk '{print $4}') :"
+#set -g status-right "#[fg=blue]#(tmux-cpu --no-color)"
 
 # Set mouse mode on for better interaction
 set -g mouse on
@@ -54,3 +44,10 @@ bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-selection
 bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
 
+# Plugins Installation
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-cpu'
+set -g @plugin 'lawabidingcactus/tmux-gruvbox-truecolor'
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run -b '~/.tmux/plugins/tpm/tpm'
