--- a/tmux.conf
+++ b/tmux.conf
@@ -19,7 +19,7 @@ bind-key R source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
 
 # Set status bar for tmux
 #set -g status-left '#{cpu_bg_color} CPU: #{cpu_icon} #{cpu_percentage} | %a %h-%d %H:%M '
-#set -g status-right-length 60
+set -g status-right-length 150
 #set -g status-right "#[fg=blue]#S #I:#P #[fg=yellow]: %d %b %Y #[fg=green]: %l:%M %p : #(date -u | awk '{print $4}') :"
 #set -g status-right "#[fg=blue]#(tmux-cpu --no-color)"
 
@@ -44,10 +44,18 @@ bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-selection
 bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
 
+# Link tmux buffer to system clipboard
+bind y run-shell "tmux show-buffer | xclip -sel clip -i" \; display-message "Copied tmux buffer to system clipboard"
+
+set-option -as terminal-overrides ",xterm*:RGB"
+
 # Plugins Installation
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-cpu'
 set -g @plugin 'lawabidingcactus/tmux-gruvbox-truecolor'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @yank_selection_mouse 'clipboard'
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
